# DataBase_HospitalService

./: README.md
centerstation/: CMakeLists.txt  package.xml
centerstation/src/: centerstation_node.cpp
cs_service/: CMakeLists.txt  package.xml
cs_service/src/: service_client.cpp  service_server.cpp
cs_service/srv/: CS_Srv.srv
multi_robot/: CMakeLists.txt  package.xml
multi_robot/launch/: main.launch  one_robot.launch  robots.launch
multirobot_navigation/: CMakeLists.txt  package.xml
multirobot_navigation/launch/: move_base.launch  turtlebot3_navigation.launch
multirobot_navigation/maps/: map.pgm
multirobot_navigation/rviz/: turtlebot3_navigation.rviz
