<?xml version="1.0"?>
<package format="2">
  <name>CS_service</name>
  <version>0.0.0</version>
  <description>The CS_service package</description>

  
  <maintainer email="ghada@todo.todo">ghada</maintainer>
<license>TODO</license>


<buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

<build_depend>cmake_modules</build_depend>
<build_depend>libmysqlclient-dev</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>

<exec_depend>cmake_modules</exec_depend>
<exec_depend>libmysqlclient-dev</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
 <cpp lflags="-lmysqlclient"/>
  </export>
</package>
